idf_component_register(
    SRCS 
        "main.c" 
        "fizzbuzzpop.c" 
        "countdown.c" 
        "led.c" 
        "light_sensor.c"
        "bme280.c"
        "i2c.c"
        "wifi.c"
        "battery.c"
        "api.c"
        "time_helper.c"
    INCLUDE_DIRS 
        "."
    REQUIRES 
        led_strip    
        driver
        esp_wifi
        esp_driver_i2c
        esp_adc
        nvs_flash
        esp_http_client
        mbedtls
    EMBED_TXTFILES "certs/worker_ca.pem"
)